# creamystrand

./: .gitignore  CMakeLists.txt  README.md
Apps/StrandSimulator/: CMakeLists.txt  ProblemStepper.cc  ProblemStepper.hh  StrandSimulatorApp.cc  StrandSimulatorApp.hh
Apps/StrandSimulator/Problems/: XMLReader.cc  XMLReader.hh
Apps/StrandSimulator/Render/: Camera.cc  Camera.hh  FluidsRenderer.cc  FluidsRenderer.hh  JET.hh  RenderingUtilities.cc  RenderingUtilities.hh  TrackBall.cc  TrackBall.hh  Translator.cc  Translator.hh  TriangleMeshRenderer.cc  TriangleMeshRenderer.hh  ViewController.cc  ViewController.hh  Zoomer.cc  Zoomer.hh
StrandSim/: BOB.linux64.LI40.lib1.o.bks  CMakeLists.txt  CMakeSourceFiles.txt  GNUmakefile  README
StrandSim/Collision/: BVH.cc  BVH.hh  BVHNode.hh  CTCD.cpp  CTCD.h  CollisionBase.cc  CollisionBase.hh  CollisionDetector.cc  CollisionDetector.hh  CollisionUtils.cc  CollisionUtils.hh  ContinuousTimeCollision.cc  ContinuousTimeCollision.hh  EdgeFaceCollision.cc  EdgeFaceCollision.hh  EdgeFaceIntersection.cc  EdgeFaceIntersection.hh  ElementProxy.cc  ElementProxy.hh  OrientedBoundingBox.cc  OrientedBoundingBox.hh  ProximityCollision.cc  ProximityCollision.hh  TriangularMesh.cc  TriangularMesh.hh  VertexFaceCollision.cc  VertexFaceCollision.hh  rpoly.h
StrandSim/Control/: Capsule.cc  Capsule.hh  Icosphere.cc  Icosphere.hh  ObjParser.cc  ObjParser.hh  RoundCornerBox.cc  RoundCornerBox.hh  RoundCylinder.cc  RoundCylinder.hh  SimpleMeshController.cc  SimpleMeshController.hh
StrandSim/Core/: BandMatrix.hh  BandMatrixFwd.hh  BoundingBox.hh  CollisionParameters.hh  Definitions.hh  ElasticStrand.cc  ElasticStrand.hh  ElasticStrandParameters.cc  ElasticStrandParameters.hh  ElasticStrandUtils.hh  LinearSolver.cc  LinearSolver.hh  StepperBase.hh  StrandBase.cc  StrandBase.hh  StrandState.cc  StrandState.hh
StrandSim/Dependencies/: BendingProducts.cc  BendingProducts.hh  DegreesOfFreedom.cc  DegreesOfFreedom.hh  DependencyNode.hh  ElasticityParameters.hh  Kappas.cc  Kappas.hh  MaterialFrames.cc  MaterialFrames.hh  ReferenceFrames.cc  ReferenceFrames.hh  Twists.cc  Twists.hh
StrandSim/Dynamic/: AlgebraicMultigrid.hh  CohesionTable.cc  CohesionTable.hh  DOFScriptingController.cc  DOFScriptingController.hh  DistanceFieldObject.cc  DistanceFieldObject.hh  FluidScriptingController.cc  FluidScriptingController.hh  GeometricLevelGen.cc  GeometricLevelGen.hh  ImplicitStepper.cc  ImplicitStepper.hh  LiquidSimulator.cc  LiquidSimulator.hh  MeshScriptingController.cc  MeshScriptingController.hh  ScriptingController.cc  ScriptingController.hh  SimulationParameters.hh  StrandDynamicTraits.cc  StrandDynamicTraits.hh  StrandImplicitManager.cc  StrandImplicitManager.hh  TriangularMeshFlow.cc  TriangularMeshFlow.hh
StrandSim/Forces/: AirDragForce.cc  AirDragForce.hh  BendingForce.cc  BendingForce.hh  FixingForce.cc  FixingForce.hh  FluidDragForce.cc  FluidDragForce.hh  FluidPressureForce.cc  FluidPressureForce.hh  ForceAccumulator.hh  ForceBase.cc  ForceBase.hh  GravitationForce.cc  GravitationForce.hh  LevelSet.cc  LevelSet.hh  LevelSetFwd.hh  StretchingForce.cc  StretchingForce.hh  TwistingForce.cc  TwistingForce.hh  ViscousOrNotViscous.hh
StrandSim/Forces/Bridson/: array.hh  array1.hh  array2.hh  array2_utils.hh  array3.hh  array3_utils.hh  levelset_util.cc  levelset_util.hh  util.hh
StrandSim/Render/: Color.hh  OpenGLDecl.hh  OpenGLHeaders.hh  RenderBase.cc  RenderBase.hh  StrandRenderer.cc  StrandRenderer.hh
StrandSim/Utils/: Cycle.hh  Distances.cc  Distances.hh  EigenSerialization.hh  IndexedSet.hh  LoggingTimer.hh  MathUtilities.cc  MathUtilities.hh  MemUtilities.cc  MemUtilities.hh  Memory.cc  Memory.hh  MetricTree.hh  MsgInfo.cc  MsgInfo.hh  Sorter.cc  Sorter.hh  SpatialHashMap.hh  SpatialHashMapFwd.hh  SpherePattern.hh  StringUtilities.cc  StringUtilities.hh  SymmetricBandMatrixSolver.hh  TextLog.cc  TextLog.hh  ThreadUtils.hh  TimeUtils.hh  Timer.cc  Timer.hh
bogus/: CMakeLists.txt  CMakeSources.txt
bogus/Core/: Block.fwd.hpp  Block.hpp  Block.impl.hpp  Block.io.hpp  BlockSolvers.fwd.hpp  BlockSolvers.hpp  BlockSolvers.impl.hpp
bogus/Core/Block/: Access.hpp  BlockMatrixBase.hpp  BlockObjectBase.hpp  CompoundMatrix.hpp  CompoundMatrix.impl.hpp  CompoundSparseBlockIndex.hpp  CompressedSparseBlockIndex.hpp  Constants.hpp  DynamicExpressions.hpp  Evaluators.hpp  Expressions.hpp  FlatSparseBlockMatrix.hpp  IterableBlockObject.hpp  MappedSparseBlockMatrix.hpp  MklBindings.hpp  Operators.hpp  ScalarBindings.hpp  Serialization.hpp  SparseAssign.impl.hpp  SparseBlockIndex.hpp  SparseBlockIndex.impl.hpp  SparseBlockIndexComputer.hpp  SparseBlockMatrix.hpp  SparseBlockMatrixBase.hpp  SparseBlockMatrixBase.impl.hpp  SparseMatrixMatrixProduct.impl.hpp  SparseMatrixVectorProduct.impl.hpp  SparseScaleAdd.impl.hpp  Streams.hpp  Traits.hpp  Zero.hpp
bogus/Core/BlockSolvers/: ADMM.hpp  ADMM.impl.hpp  BlockSolverBase.hpp  Coloring.hpp  Coloring.impl.hpp  ConstrainedSolverBase.hpp  ConstrainedSolverBase.impl.hpp  GaussSeidel.hpp  GaussSeidel.impl.hpp  GaussSeidelBase.hpp  GaussSeidelBase.impl.hpp  Krylov.hpp  Krylov.impl.hpp  KrylovMethods.hpp  KrylovMethods.impl.hpp  LCPLaw.hpp  LCPLaw.impl.hpp  Preconditioners.hpp  Preconditioners.impl.hpp  ProductGaussSeidel.hpp  ProductGaussSeidel.impl.hpp  ProductGaussSeidelUtils.hpp  ProjectedGradient.hpp  ProjectedGradient.impl.hpp  PyramidLaw.hpp  PyramidLaw.impl.hpp
bogus/Core/Eigen/: BlockBindings.hpp  EigenBlockContainers.hpp  EigenLinearSolvers.hpp  EigenMatrixTraits.hpp  EigenProblemTraits.hpp  EigenSerialization.hpp  EigenSparseLinearSolvers.hpp  SparseConversions.hpp  SparseHeader.hpp
bogus/Core/Utils/: CppTools.hpp  LinearSolverBase.hpp  Lock.hpp  NaiveSharedPtr.hpp  NonSmoothNewton.hpp  NonSmoothNewton.impl.hpp  NumTraits.hpp  Polynomial.hpp  Polynomial.impl.hpp  (+3 more)
bogus/Extra/: SecondOrder.fwd.hpp  SecondOrder.hpp  SecondOrder.impl.hpp
bogus/Interfaces/: Cadoux.hpp  FrictionProblem.cpp  FrictionProblem.hpp  FrictionProblem.impl.hpp  MecheEigenInterface.cpp  MecheEigenInterface.hpp  PrimalFrictionProblem.cpp
(+90 files in other folders)
